[brown] 실행가능하도록 진행 중